# proxies

./: .dockerignore  .gitignore  Dockerfile  Taskfile.yml  ansible.cfg  env.sh  pyproject.toml  req.txt
.github/workflows/: ci.yaml  prod.yaml  test.yaml
infra/ansible/inventory/: hosts.yaml  password.yaml
infra/ansible/playbook/: master.yaml
infra/helm/proxy-backend/: Chart.yaml  values.yaml
kubernetes/base/argocd/: config.yaml
kubernetes/base/cert-manage/: config.yaml
kubernetes/base/domains/: dev.proxies.yaml  grafana.yaml  proxies.yaml
kubernetes/base/metallb/: config.yaml
kubernetes/helm/argocd/: values.yaml
kubernetes/helm/cert-manager/: values.yaml
kubernetes/helm/nginx/: values.yaml
kubernetes/helm/traefik/: values.yaml
kubernetes/prod/argocd/: config.yaml
kubernetes/prod/cert-manage/: config.yaml
kubernetes/prod/proxies/: deployment.yaml  service.yaml
kubernetes/test/proxies/: deployment.yaml  service.yaml
src/: main.py  old.py  proxy_handler_map.py
src/core/: configs.py  logging_setup.py
src/infrastructure/: redis.py
src/process_proxy/: tools.py
src/requests/: subs.py
src/routes/: http_routes.py
src/templates/: firebase_heartbeat.html  heartbeat.html  login.html
src/tools/: auth_deps.py  auth_deps_t.py  chatgpt.py  complicated.md  db.py  db_t.py  duration.py  exceptions.py  exchange.py  file.py  fromfile.py  proxy.py  referral.py  schema.py  tokens.py  validate_on_ban_words.py  variabletttlcache.py  ws.py
src/utils/: __init__.py  get_src_path.py  headers.py  load_routers.py  templates.py
(+81 files in other folders)
